# frappe_ai

./: .gitattributes  .gitignore  ARCHITECTURE.md  DATABEK.md  FRAPPE_AI.md  HOW_MEMORY_WORKS.md  MASON.md  README.md  WALKTHROUGH.md
apps/crm/: README.md  pyproject.toml
apps/crm/crm/: SKILL.md  hooks.py  patches.txt
apps/databek/: MODULES.md  README.md  RULES.md  pyproject.toml
apps/databek/databek/: CHANGELOG.md  SKILL.md  hooks.py  modules.txt  patches.txt
apps/databek/skills/: README.md  SKILL.template.md
apps/databek/skills/add-job/: SKILL.md  enqueue.py.snippet  scheduler_events.py.snippet  tasks.py.snippet
apps/databek/skills/add-logic/: SKILL.md  controller_methods.py.snippet  doc_events.py.snippet  whitelist_api.py.snippet
apps/databek/skills/add-ui/: SKILL.md  dashboard_chart.json.template  number_card.json.template  query_report.sql.snippet  script_report.py.snippet  workspace.json.template
apps/databek/skills/create-doctype/: SKILL.md  client.js.template  controller.py.template  module.SKILL.template.md
apps/databek/skills/customize-doctype/: SKILL.md  create_custom_field.py.snippet  property_setter.py.snippet
apps/databek/skills/doctor/: SKILL.md  check.py
apps/databek/skills/export-fixtures/: SKILL.md  run.sh
apps/databek/skills/install-app/: SKILL.md  run.sh
apps/databek/skills/manage-access/: SKILL.md  access_report.py
apps/databek/skills/manage-deploy/: SKILL.md
apps/databek/skills/manage-permissions/: SKILL.md
apps/databek/skills/manage-ui/: SKILL.md
apps/databek/skills/run/: SKILL.md  apply.sh
apps/hr/: README.md  pyproject.toml
apps/hr/hr/: SKILL.md  hooks.py  patches.txt
apps/mason/: README.md  RULES.md  pyproject.toml
apps/mason/mason/: CHANGELOG.md  SKILL.md  hooks.py  patches.txt
apps/mason/skills/: README.md  SKILL.template.md
(+107 files in other folders)
