[project]
name = "crm"
authors = [{ name = "Databek", email = "noreply@databek.localhost" }]
description = "Databek CRM module — clients (individual or company)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "crm"
