[project]
name = "databek"
authors = [{ name = "Databek", email = "noreply@databek.localhost" }]
description = "AI-extensible internal-tools platform on Frappe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "databek"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
