[project]
name = "hr"
authors = [{ name = "Databek", email = "noreply@databek.localhost" }]
description = "Databek HR module — employees, levels, functional roles."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "hr"
